the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-file
          persistentVolumeClaim:
            claimName: todoapp-claim
      containers:
        - name: todo-app
          image: raihhardv/todo-app
          volumeMounts:
          - name: shared-file
            mountPath: /usr/src/app/files
