the_project/manifests/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
        - name: todo-frontend
          image: raihhardv/todo-frontend@sha256:b70c0bfbeb09aa98091b2b6a6be4c88fe8dca56a7e0e78f165f91beb3dc2a7a5
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /
              port: 80
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            httpGet:
              path: /
              port: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "200m"
            limits:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-svc
spec:
  type: ClusterIP
  selector: 
    app: todo-frontend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
