the_project/manifests/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  type: ClusterIP
  selector: 
    app: todo-backend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
